--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,7 @@
 <template>
   <section>
+
+    <textarea ref="editorElement"></textarea>
     <h2>${heading}</h2>
 
     <form submit.trigger="submit()">
