use aurelia fetch client and injection

--- a/src/app.html
+++ b/src/app.html
@@ -1,10 +1,6 @@
 <template>
   <section>
-    <textarea ref="editorElement"></textarea>
-    <ul>
-      <li>Electron ${electronVersion}</li>
-      <li>Chrome ${chromeVersion}</li>
-      <li>Node ${nodeVersion}</li>
-    </ul>
+    <textarea ref="editorElement">test hest
+</textarea>
   </section>
 </template>
