basic styles and renamed watcher

--- a/shell/app.html
+++ b/shell/app.html
@@ -1,6 +1,5 @@
 <template>
   <section>
-    <textarea ref="editorElement">test hest
-</textarea>
+    <textarea ref="editorElement"></textarea>
   </section>
 </template>
