combined service monitors

--- a/shell/src/app.html
+++ b/shell/src/app.html
@@ -1,5 +1,6 @@
 <template>
-  <section>
-    <textarea ref="editorElement"></textarea>
-  </section>
+    <section>
+        <compose view-model="widgets/controlTab"></compose>
+        <compose view-model="widgets/editor"></compose>
+    </section>
 </template>
