initial query execution path in shell

--- a/shell/src/app.html
+++ b/shell/src/app.html
@@ -1,6 +1,8 @@
 <template>
     <section>
-        <compose view-model="widgets/controlTab"></compose>
-        <compose view-model="widgets/editor"></compose>
+        <compose view-model="widgets/TabControl"></compose>
+        <compose view-model="widgets/ControlPanel"></compose>
+        <compose view-model="widgets/CodeMirror"></compose>
+        <compose view-model="widgets/ResultPanel"></compose>
     </section>
 </template>
