initial results rendering in ui

--- a/shell/src/widgets/CodeMirror.html
+++ b/shell/src/widgets/CodeMirror.html
@@ -1,3 +1,4 @@
 <template>
-  <textarea ref="editorElement"></textarea>
+  <textarea ref="editorElement">CodeListItem.Take(10).Dump();
+</textarea>
 </template>
