--- a/shell/src/widgets/ResultPanel.html
+++ b/shell/src/widgets/ResultPanel.html
@@ -1,3 +1,15 @@
 <template>
-  <div ref="output"></div>
+    <table>
+        <caption>${title}</caption>
+        <thead>
+            <th repeat.for="val of headers">${val}</th>
+        </thead>
+        <tbody>
+            <tr repeat.for="row of records">
+                <td repeat.for="col of row">
+                    ${col}
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </template>
