--- a/shell/src/app.html
+++ b/shell/src/app.html
@@ -1,8 +1,5 @@
 <template>
-    <section>
-        <compose view-model="widgets/TabControl"></compose>
-        <compose view-model="widgets/ControlPanel"></compose>
-        <compose view-model="widgets/CodeMirror"></compose>
-        <compose view-model="widgets/ResultPanel"></compose>
-    </section>
+    <div>
+        <router-view></router-view>
+    </div>
 </template>
