--- a/shell/src/widgets/CodeMirror.html
+++ b/shell/src/widgets/CodeMirror.html
@@ -1,4 +1,3 @@
 <template>
-  <textarea ref="editorElement">CodeListItem.Take(10).Dump();
-</textarea>
+  <textarea ref="editorElement"></textarea>
 </template>
