actual reload shell commit ...

--- a/shell/index.html
+++ b/shell/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Frank</title>
         <script type="text/javascript">
-            document.write('<base href="file:///' + __dirname.replace(/\\/g, '/') + '/app">'); // wee
+            document.write('<base href="file://' + __dirname.replace(/\\/g, '/') + '/index.html">'); // wee
         </script>
         <script>
         // angular2 messed with these symbols, so save them before anything
