--- a/shell/index.html
+++ b/shell/index.html
@@ -15,6 +15,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="custom.css">
         <script src="node_modules/es6-shim/es6-shim.min.js"></script>
         <script src="node_modules/zone.js/dist/zone.js"></script>
         <script src="node_modules/reflect-metadata/Reflect.js"></script>
@@ -26,6 +27,6 @@
     </head>
 
     <body>
-        <f-app>Loading...</f-app>
+        <f-app>Loading...</f-app>    
     </body>
 </html>
