--- a/shell/index.html
+++ b/shell/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="node_modules/normalizecss/normalize.css">
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
         <link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css">
+        <link rel="stylesheet" href="node_modules/codemirror/addon/hint/show-hint.css">
         <link rel="stylesheet" href="styles.css">
         <script src="node_modules/es6-shim/es6-shim.min.js"></script>
         <script src="node_modules/zone.js/dist/zone.js"></script>
